refactor: List 첫 요소 반환 방식 변경
- IDE 추천 방식으로 개선